--- a/contact-us.html
+++ b/contact-us.html
@@ -128,11 +128,7 @@
                     <div class="location-map">
                         <div id="map">
                             <!-- Replace this with actual Minnuz location embed -->
-                            <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3937.1690989159513!2d76.2387999748098!3d11.281980688942992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba64ea3aa1c4f4b%3A0x4f601f2f2f2f2f2f!2sNilambur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1718532930000" 
-                                width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" 
-                                referrerpolicy="no-referrer-when-downgrade">
-                            </iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.98986671776!2d76.2254412748124!3d11.262154788917753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba63b72beb53473%3A0x9456c8c8687b26e8!2sFreshday%20Minnuz%20Foods!5e0!3m2!1sen!2sin!4v1750068810898!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
