--- a/product-page.html
+++ b/product-page.html
@@ -250,7 +250,7 @@
                                             <i class="icofont-phone"></i>
                                         </div>
                                         <div class="details">
-                                            <p><a href="tel:+971566265082" style="color: #716c80;">+91 7994859644</a></p>
+                                            <p><a href="tel:+917994859644" style="color: #716c80;">+91 7994859644</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -258,7 +258,7 @@
                                             <i class="icofont-envelope"></i>
                                         </div>
                                         <div class="details">
-                                            <p><a href="mailto:akheruae@gmail.com" style="color: #716c80;">minnuzfoods@gmail.com</a></p>
+                                            <p><a href="mailto:foodsminnuz@gmail.com" style="color: #716c80;">foodsminnuz@gmail.com</a></p>
                                         </div>
                                     </li>
                                 </ul>
