--- a/contact-us.html
+++ b/contact-us.html
@@ -113,7 +113,7 @@
                             <i class="icofont-envelope"></i>
                         </div>
                         <div class="contact-details">
-                            <p><a href="mailto:minnuzfoods@gmail.com" style="color: #716c80;">minnuzfoods@gmail.com</a></p>
+                            <p><a href="mailto:foodsminnuz@gmail.com" style="color: #716c80;">foodsminnuz@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -229,7 +229,7 @@ function sendToWhatsApp() {
                                             <i class="icofont-envelope"></i>
                                         </div>
                                         <div class="details">
-                                            <p><a href="mailto:akheruae@gmail.com" style="color: #716c80;">minnuzfoods@gmail.com</a></p>
+                                            <p><a href="mailto:foodsminnuz@gmail.com" style="color: #716c80;">foodsminnuz@gmail.com</a></p>
                                         </div>
                                     </li>
                                 </ul>
