--- a/about.html
+++ b/about.html
@@ -350,7 +350,7 @@
                                             <i class="icofont-envelope"></i>
                                         </div>
                                         <div class="details">
-                                            <p><a href="mailto:akheruae@gmail.com" style="color: #716c80;">minnuzfoods@gmail.com</a></p>
+                                            <p><a href="mailto:foodsminnuz@gmail.com" style="color: #716c80;">foodsminnuz@gmail.com</a></p>
                                         </div>
                                     </li>
                                 </ul>
